feature/kfin-39 first big refactoring with restructure of architecture